# mls-Infer-opt

./: .gitignore  PHASE3_STUDENT_GUIDE.md  README.md  pyproject.toml  report1.md  report2.md  report3.md  run.sh  sample3.md  开发报告.md
src/mls_infer_opt/: ARCHITECTURE.md  PIPELINE_SPEC.md  __init__.py  agent.py  present.py
src/mls_infer_opt/analyze/: __init__.py  grad.py  heuristic.py  prompt.py  situation.py
src/mls_infer_opt/evaluate/: __init__.py  bench.py  cases.py  gate.py  oracle.py  protocol.py  runner.py  worker.py
src/mls_infer_opt/generate/: __init__.py  codegen.py  prompt.py  space.py
src/mls_infer_opt/generate/assets/: baseline_engine.py
src/mls_infer_opt/llm/: __init__.py  config.py  errors.py  fake.py  openai_client.py  tooling.py
src/mls_infer_opt/loop/: __init__.py  __main__.py  trainer.py
src/mls_infer_opt/searchspace/: __init__.py  compat.py  dims.py  policy.py
src/mls_infer_opt/state/: __init__.py  candidate.py  common.py  context.py  eval.py  gradient.py  loop.py  policy.py
tests/: test_analyze.py  test_basic.py  test_evaluate.py  test_generate.py  test_llm_config.py  test_llm_openai_client.py  test_llm_tooling.py  test_loop.py  test_present.py  test_searchspace.py
