[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "mls-infer-opt"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
# 评测容器为 NGC 镜像：Python 3.10 + torch 2.3(CUDA) + numpy 1.24。
# 约束放宽到与之兼容，避免 pip 解析/构建在评测环境失败。
requires-python = ">=3.10"
dependencies = [
    "torch>=2.2",
    "numpy>=1.24",
    "openai>=1.40",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "ruff>=0.6",
    "mypy>=1.10",
]

[tool.hatch.build.targets.wheel]
packages = ["src/mls_infer_opt"]

[tool.ruff]
line-length = 100
target-version = "py312"
# assets/ 是数据物料（generate: bootstrap 兜底 engine 源码；evaluate: vendored 参考实现），
# 不是本包模块，故意保持无类型纯 PyTorch 风格，不纳入本仓库的 lint / typecheck。
extend-exclude = [
    "src/mls_infer_opt/generate/assets",
    "src/mls_infer_opt/evaluate/assets",
    "tests/assets",
    # 运行时产物（gitignored）：runs/ 的候选/留档 engine.py 与 workspace/ 发布物都是
    # 生成的纯 PyTorch 代码，非本仓库维护的源码，不纳入 lint。
    "src/mls_infer_opt/runs",
    "src/mls_infer_opt/workspace",
]

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B"]

[tool.pytest.ini_options]
testpaths = ["tests"]

[tool.mypy]
python_version = "3.12"
strict = true
exclude = [
    "src/mls_infer_opt/generate/assets/",
    "src/mls_infer_opt/evaluate/assets/",
]

# torch 的类型 stub 不完整，worker 侧大量 torch 调用会触发 strict 下的 untyped-call 噪声；
# 这里只对 torch.* 放宽，不影响本包自身的严格检查。
[[tool.mypy.overrides]]
module = "torch.*"
disallow_untyped_calls = false
ignore_missing_imports = true
